cfunctions-0.27/tests/bad-x-1.c
// error: bad print format

PRINT_FORMAT (1, 2, 3) jubbins ()
{
  return;
}
